Finished switch to Google supported fonts

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   background-color:#F7F7FF;
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 #about-me {
   color:black;
@@ -16,6 +16,7 @@ body {
 h1 {
   text-align: center;
   color:#BDD5EA;
+  font-family: 'Arvo', serif
 }
 p {
   background-color:#495867;
