Change to yellow on the paragraph

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,6 @@ h1 {
   font-family: 'Roboto Slab', Times, serif
 }
 p {
-  background-color:#495867;
+  background-color:#F9DB6D;
   color:white;
 }
