--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,14 @@ body {
   text-align: center;
 }
 #self-title {
-  color:black;
-  background-color:#BDD5EA;
+  color:white;
+  background-color:#0B4F6C;
 }
+
+.project-link{
+  background-color: #
+}
+
 h1 {
   text-align: center;
   color:#BDD5EA;
