Made the whole block a link

--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,13 @@ body {
   text-align: center;
 }
 #self-title {
-  color:white;
-  background-color:#0B4F6C;
+  color:black;
+  background-color:#89D2DC;
 }
 
 .project-link{
-  background-color: #
+  color:white;
+  background-color: #0B4F6C;
 }
 
 h1 {
