--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,14 @@ body {
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
 
-.hidden-desc{
-  display: none;
+.project-desc{
+  display:inline-block;
+  margin-right: 0.5em;
+  margin-left: 1em;
+  padding: 15px;
+  color: black;
+  font-size: 1.125em;
+  border: none;
 }
 
 .project-button:hover{
@@ -38,6 +44,8 @@ body {
 }
 
 h1 {
+  margin: 0;
+  padding: 1em;
   text-align: center;
   color:#4C1E4F;
   font-family: 'Roboto Slab', Times, serif
