--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 }
 
 #self-title {
+  text-align: left;
   font-size: 2.5em;
   color: black;
   background-color :#89D2DC; /*~Skyblue type*/
