--- a/src/App.css
+++ b/src/App.css
@@ -2,30 +2,26 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.inner-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+#flex-top {
+  min-height: 15vh;
+}
+
+#flex-bottom {
+  min-height: 10vh;
+  align-items: stretch;
 }
 
 @keyframes App-logo-spin {
