--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,17 @@ body {
   color: azure;
 }
 
+#resume-frame {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5%;
+}
+
+#resume-loader {
+  width: 100%;
+  height: 1100px;
+}
+
 .navbar {
   text-align: left;
   font-size: 3em;
@@ -51,6 +62,10 @@ body {
 
 .navbar-link:visited {
   text-decoration: none;
+}
+
+.navbar-link-current {
+  color:#6bb3be;
 }
 
 .project-button{
